logs/tiberium-soul.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quorum'...
Listing './lib/python3.5/site-packages/quorum/test'...
Listing './lib/python3.5/site-packages/quorum-0.5.22.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tiberium'...
Listing './lib/python3.5/site-packages/tiberium/base'...
Listing './lib/python3.5/site-packages/tiberium/utils'...
Listing './lib/python3.5/site-packages/tiberium-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/tiberium_soul'...
Listing './lib/python3.5/site-packages/tiberium_soul/cert'...
Listing './lib/python3.5/site-packages/tiberium_soul/global'...
Listing './lib/python3.5/site-packages/tiberium_soul/hooks'...
Compiling './lib/python3.5/site-packages/tiberium_soul/proxy.py'...
***   File "./lib/python3.5/site-packages/tiberium_soul/proxy.py", line 99
    except BaseException, exception:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tiberium_soul/repos'...
Listing './lib/python3.5/site-packages/tiberium_soul/static'...
Listing './lib/python3.5/site-packages/tiberium_soul/static/css'...
Listing './lib/python3.5/site-packages/tiberium_soul/static/images'...
Listing './lib/python3.5/site-packages/tiberium_soul/static/js'...
Listing './lib/python3.5/site-packages/tiberium_soul/suns'...
Listing './lib/python3.5/site-packages/tiberium_soul/templates'...
Listing './lib/python3.5/site-packages/tiberium_soul/templates/app'...
Listing './lib/python3.5/site-packages/tiberium_soul/templates/partials'...
Listing './lib/python3.5/site-packages/tiberium_soul/tmp'...
Listing './lib/python3.5/site-packages/tiberium_soul/util'...
Listing './lib/python3.5/site-packages/tiberium_soul/views'...
Listing './lib/python3.5/site-packages/tiberium_soul/views/api'...
Listing './lib/python3.5/site-packages/tiberium_soul/views/web'...
Listing './lib/python3.5/site-packages/tiberium_soul-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
